@@ -1,5 +1,5 @@
 /////////////////////////////////////////////////////////////////////////
-// $Id: siminterface.cc,v 1.188 2009/01/10 11:30:20 vruppert Exp $
+// $Id: siminterface.cc,v 1.189 2009/01/12 19:15:35 sshwarts Exp $
 /////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (C) 2009  The Bochs Project
@@ -179,6 +179,13 @@ public:
 private:
   bx_bool save_sr_param(FILE *fp, bx_param_c *node, const char *sr_path, int level);
 };
+
+#if BX_DEBUGGER
+// FIXME: you will probably want to put these into the SIM-> structure
+char *debug_cmd = NULL;
+bx_bool debug_cmd_ready = 0;
+bx_bool vgaw_refresh = 0;
+#endif
 
 // recursive function to find parameters from the path
 static bx_param_c *find_param(const char *full_pname, const char *rest_of_pname, bx_param_c *base)
